--- a/source/scss/main/form-hero.scss
+++ b/source/scss/main/form-hero.scss
@@ -59,6 +59,7 @@
   color: $deep-sea;
   text-align: center;
   margin: 0 0 32px;
+  word-break: break-word;
 
   @media (min-width: $tablet-width) {
     font-size: 52px;
